--- a/src/design/main.css
+++ b/src/design/main.css
@@ -6,10 +6,14 @@ html{
     scroll-behavior: smooth;
 }
 
+section{
+    overflow: hidden;
+}
+
 /* Landing page */
 
 .landing_web{
-    height: 100vh;
+    min-height: 100vh;
     background-size: cover;
     position: relative;
     background-attachment: fixed;
@@ -25,7 +29,7 @@ html{
 .logo_container{
     position: absolute;
     background-color: rgba(0, 0, 0, 0.486);
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
 }
 
@@ -96,11 +100,10 @@ li a {
 .page{
     min-height: 100vh;  
     width:100%;
-    overflow: hidden;
 }
 
 .bemutatkozas{
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .display-1{
@@ -132,7 +135,7 @@ li a {
 /* Apartmanok */
 
 .Sir_David{
-    height: 100vh;
+    min-height: 100vh;
     background-size: cover;
     position: relative;
     background-attachment: fixed;
@@ -141,7 +144,7 @@ li a {
 .room_container{
     position: absolute;
     background-color: rgba(0, 0, 0, 0.486);
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     padding-top: 80px;
 }
@@ -419,11 +422,13 @@ li a {
   /* kapcsolat */
 
   .kapcsolat{
-    height: 100vh;
     background-size: cover;
     position: relative;
-    display: grid;
     background-attachment: fixed;
+  }
+
+  .kapcsolat_blur{
+      background-color: rgba(0, 0, 0, 0.486);;
   }
 
   .kapcsolat_text{
@@ -439,8 +444,7 @@ li a {
     backdrop-filter: blur(4px);
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .1);
     padding: 30px;
-    margin-left: 30px;
-    position: relative;
+    display: block;
   }
 
   .form-control{
