--- a/src/design/main.css
+++ b/src/design/main.css
@@ -13,13 +13,11 @@ section{
 /* Landing page */
 
 .landing_web{
-    min-height: 100vh;
     background-size: cover;
     position: relative;
     background-attachment: fixed;
     display: block;
     background-image: url(../assets/images/landing/landing_background.jpg);
-    overflow: hidden;
 }
 
 .landing_mobil{
@@ -35,7 +33,7 @@ section{
 
 .mainlogo{
     padding-top: 35vh;
-    width: clamp(200px, 50% + 20px, 650px);
+    width: 300px;
 
 }
 
@@ -58,6 +56,11 @@ section{
     padding: 8px 16px;
     text-decoration: none;
     opacity: 1;
+    display: block;
+}
+
+.btn-kisfaludy-mobil{
+    display: none;
 }
 
 .kisfaludy-img{
@@ -221,7 +224,6 @@ li a {
     width: 90% !important;
     margin-left: auto;
     margin-right: auto;
-    max-width: none;
     margin-top: 20px;
     position: relative;
     padding: 0px;
@@ -300,7 +302,7 @@ li a {
 }
 
 .extra_img img{
-    width: clamp(20px, 70% + 70px, 200px) !important;
+    width: 120px;
     margin: 10px;
     transition: 0.15s ease-in;
 }
@@ -332,11 +334,13 @@ li a {
 
 .galeria{
     margin: -80px;
+    width: 450px;
 }
 
 .road1{
     margin-left: 200px;
     margin-top: -10px;
+    width: 160px;
 }
 
 .house{
@@ -353,6 +357,7 @@ li a {
     margin-left: 100px;
     padding-top: 50px;
     transition: 0.15s ease-in;
+    width: 450px;
 }
 
 .lake:hover{
@@ -363,6 +368,7 @@ li a {
 .pajta{
     margin-top: -100px;
     transition: 0.15s ease-in;
+    width: 400px;
 }
 
 .pajta:hover{
@@ -373,6 +379,7 @@ li a {
 .road2{
     padding-top: 70px;
     margin-left: -70px;
+    width: 140px;
 }
 
 .row_galeria {
@@ -399,19 +406,6 @@ li a {
       display: none;
   }
   
-  @media screen and (max-width: 800px) {
-    .column {
-      flex: 50%;
-      max-width: 50%;
-    }
-  }
-
-  @media screen and (max-width: 600px) {
-    .column {
-      flex: 100%;
-      max-width: 100%;
-    }
-  }
 
   .modal-title{
     font-family: 'Soulwave';
@@ -480,7 +474,7 @@ li a {
       float: right;
   }
 
-  @media only screen and (max-width: 419px) {
+  @media only screen and (max-width: 800px) {
 
     .logo_container{
         width: clamp(400px, 100% + 10px, 800px);
@@ -556,4 +550,60 @@ li a {
         line-height: 3px;
         margin-top: 3px;
     }
+
+    .btn-kisfaludy{
+        display: none;
+    }
+
+    .btn-kisfaludy-mobil{
+        display: block;
+        font-family: 'Cormorant Garamond', serif;
+        text-transform: uppercase;
+        font-weight: bold;
+        color: rgb(255, 255, 255);
+        padding-top: 7px;
+        display: block;
+        color: rgb(255, 255, 255);
+        padding: 8px 16px;
+        text-decoration: none;
+        opacity: 1;
+    }
+
+/* Galeria img mobil */
+
+    .galeria{
+        width: 200px;
+    }
+    
+    .road1{
+        display: none;
+    }
+    
+    .road2{
+        display: none;
+    }
+
+/* Galeria Mobil */
+
+    .column {
+        flex: 100%;
+        max-width: 100%;
+        padding: 0 12px;
+      }
+      
+      .column img {
+        margin-top: 24px;
+        vertical-align: middle;
+        width: 100%;
+      }
+    
+      .szobak_mobil {
+          display: none;
+      }
+      
+    
+      .modal-title{
+        font-family: 'Soulwave';
+        font-size: 40px;
+      }
   }
