--- a/src/design/main.css
+++ b/src/design/main.css
@@ -14,10 +14,10 @@ section{
 
 .landing_web{
     background-size: cover;
-    position: relative;
     background-attachment: fixed;
     display: block;
     background-image: url(../assets/images/landing/landing_background.jpg);
+    min-height: 100vh;
 }
 
 .landing_mobil{
@@ -25,7 +25,6 @@ section{
 }
 
 .logo_container{
-    position: absolute;
     background-color: rgba(0, 0, 0, 0.486);
     min-height: 100vh;
     width: 100%;
@@ -33,8 +32,7 @@ section{
 
 .mainlogo{
     padding-top: 35vh;
-    width: 300px;
-
+    width: 500px;
 }
 
 .nav-item{
@@ -46,16 +44,15 @@ section{
 }
 
 .btn-kisfaludy{
-    font-family: 'Cormorant Garamond', serif;
     text-transform: uppercase;
-    font-weight: bold;
-    color: rgb(255, 255, 255);
-    padding-top: 7px;
     display: block;
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.63);
     padding: 8px 16px;
     text-decoration: none;
     opacity: 1;
+    transition: .3s ease-in-out;
+    font-weight:normal;
+    font-size: 18px;
     display: block;
 }
 
@@ -72,30 +69,38 @@ section{
     font-family: 'Cormorant Garamond', serif;
     text-transform: uppercase;
     border-radius: 10px;
-    text-decoration: none;
+    
+    font-size: 20px;
+}
+.mybutton a{
+   color: black;
+   text-decoration: none;
 }
 
-li a {
+.nav-item a {
     display: block;
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.63);
     padding: 8px 16px;
     text-decoration: none;
     opacity: 1;
+    transition: .3s ease-in-out;
+    font-weight:normal;
+    font-size: 18px;
   }
   
   /* Change the link color on hover */
-  li a:hover {
-    border: 1px solid whitesmoke;
+  .nav-item a:hover {
     border-radius: 10px;
     color: white !important;
     text-decoration: none;
+    transition: .2s ease-in-out;
   }
 
   .btn-kisfaludy:hover{
-    border: 1px solid whitesmoke;
     border-radius: 10px;
     color: white !important;
     text-decoration: none;
+    transition: .2s ease-in-out;
   }
 
 /* Kutyabarat vendeghaz bemutatkozas */
@@ -221,13 +226,8 @@ li a {
 /* Modal apartmanok */
 
 .modal .modal-dialog-apartman{
-    width: 90% !important;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    position: relative;
-    padding: 0px;
-    height: 100%;
+    margin-top: 30px;
+    padding: 30px 0px;
 }
 
 .modal_col{
@@ -260,16 +260,13 @@ li a {
 .arak{
     font-family: 'Soulwave';
     font-size: 50px;
-    float: right;
-    position: absolute;
-    top:155px;
-    right:18px;
+    margin: -30px;
 }
 
 .table{
     margin: 0px !important;
     font-family: 'Cormorant Garamond', serif;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .aprobetus{
@@ -302,7 +299,7 @@ li a {
 }
 
 .extra_img img{
-    width: 120px;
+    width: 320px;
     margin: 10px;
     transition: 0.15s ease-in;
 }
@@ -333,18 +330,17 @@ li a {
 /* Galeria */
 
 .galeria{
-    margin: -80px;
-    width: 450px;
+    margin: 0px;
+    width: 100%;
 }
 
 .road1{
     margin-left: 200px;
     margin-top: -10px;
-    width: 160px;
+    width: 50%;
 }
 
 .house{
-    margin-top: -90px;
     transition: 0.15s ease-in;
 }
 
@@ -357,7 +353,6 @@ li a {
     margin-left: 100px;
     padding-top: 50px;
     transition: 0.15s ease-in;
-    width: 450px;
 }
 
 .lake:hover{
@@ -366,9 +361,7 @@ li a {
 }
 
 .pajta{
-    margin-top: -100px;
     transition: 0.15s ease-in;
-    width: 400px;
 }
 
 .pajta:hover{
@@ -377,9 +370,7 @@ li a {
 }
 
 .road2{
-    padding-top: 70px;
-    margin-left: -70px;
-    width: 140px;
+    width: 50%;
 }
 
 .row_galeria {
@@ -417,7 +408,6 @@ li a {
 
   .kapcsolat{
     background-size: cover;
-    position: relative;
     background-attachment: fixed;
   }
 
@@ -476,8 +466,16 @@ li a {
 
   @media only screen and (max-width: 800px) {
 
-    .logo_container{
-        width: clamp(400px, 100% + 10px, 800px);
+    .bemutatkozas{
+        min-height: 50vh;
+        padding-bottom: 100px;
+    }
+
+    .mainlogo{
+        padding-top: 35vh;
+        width:100%;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     .landing{
@@ -497,21 +495,29 @@ li a {
         margin-left: -80px;
     }
 
+    .extra_img img{
+        width: 50%;
+        margin: 20px;
+    }
+
     .Sir_David{
         display: none;
     }
 
+
     .btn-szoba{
-        max-width: 100%;
+        width: 100%;
+        padding: 20px;
     }
 
     .btn-szoba img{
-        width: 200px;
-        padding-bottom: 20px;
+        width: 100%;
+        padding: 20px;
     }
 
     .szobak_mobil{
         display: block;
+        min-height: 100vh;
     }
     
     .sirdavid_photo2_mobil{
@@ -534,14 +540,13 @@ li a {
     .apartman_nev2_mobil{
         font-family: 'Soulwave';
         font-size: 30px;
-        float: right;
         margin-top: -10px;
     }
 
     .table_mobil{
         margin: 0px !important;
         font-family: 'Cormorant Garamond', serif;
-        font-size: 12px;
+        font-size: 13px;
     }
 
     .aprobetus_mobil{
@@ -569,10 +574,21 @@ li a {
         opacity: 1;
     }
 
-/* Galeria img mobil */
 
+/* Galeria img mobil */
     .galeria{
-        width: 200px;
+        width: 250px;
+        margin: 0;
+    }
+
+    .lake{
+        margin-left: 30px;
+        padding-top: 0px;
+        width: 300px;
+    }
+
+    .pajta{
+        width:210px;
     }
     
     .road1{
@@ -596,11 +612,6 @@ li a {
         vertical-align: middle;
         width: 100%;
       }
-    
-      .szobak_mobil {
-          display: none;
-      }
-      
     
       .modal-title{
         font-family: 'Soulwave';
